# RecluseEngine_v2.0

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  generate.py
Engine/: CMakeLists.txt
Engine/CMake/: Animation.cmake  EditorSDK.cmake  Game.cmake  Renderer.cmake  Scene.cmake
Engine/Include/Recluse/: Application.hpp  EngineModule.hpp  MessageBus.hpp
Engine/Resources/: RendererConfigs.rcl  RendererPrograms.rcl  RendererResources.rcl
Engine/Resources/Common/: Common.rcl
Engine/Resources/Game/: TranformEvents.rcl
Engine/Shaders/: ShaderCompilerRun.json
Engine/Shaders/Editor/: ShaderGrid.ps.hlsl
Engine/Shaders/Geometry/: ApplicationSettings.glsl  ApplicationSettings.hlsli  Vertex.glsl  Vertex.hlsli  VertexPass.hlsli  VertexPass.vert
Engine/Shaders/Lighting/: AmbientOcclusion.hlsli  AmbientOcclustion.hlsli  GBufferDefinition.hlsli  LightDefinitions.hlsli  LocalLighting.hlsli  Shadows.hlsli
Engine/Source/: Application.cpp  MessageBus.cpp
Engine/Source/Game/: GameEntity.cpp
Engine/Source/Renderer/: AOVRenderModule.cpp  AOVRenderModule.hpp  LightClusterModule.cpp  LightClusterModule.hpp  Mesh.cpp  PreZRenderModule.cpp  PreZRenderModule.hpp  RenderCommandList.cpp  RenderDB.cpp  Renderer.cpp  Texture.cpp  Texture2D.cpp
Engine/Source/Scene/: Camera.cpp  Scene.cpp
Framework/: CMakeLists.txt  README.md
Framework/CMake/: Core.cmake  Definitions.cmake  Graphics.cmake  Math.cmake
Framework/Include/Core/: Arch.hpp  Async.hpp  Logger.hpp  Messaging.hpp  RealtimeTick.hpp  String.hpp  Types.hpp
Framework/Include/Graphics/: CommandBuffer.hpp  CommandList.hpp  CommandQueue.hpp  Format.hpp  GraphicsAdapter.hpp  GraphicsContext.hpp  GraphicsDevice.hpp  Resource.hpp  ResourceView.hpp
Framework/Include/Recluse/: Arch.hpp  Array.hpp  Async.hpp  Logger.hpp  MessageBus.hpp  Messaging.hpp  Namespace.hpp  RGUID.hpp  RealtimeTick.hpp  String.hpp  Time.hpp  Types.hpp  Utility.hpp
Framework/Source/: Archive.cpp  GlobalCommand.cpp  MessageBus.cpp  RGUID.cpp  String.cpp  ThreadPool.cpp
Framework/Source/Graphics/: DXCShaderBuilder.cpp  DeviceFactory.cpp  GlslangShaderBuilder.cpp  LifetimeCache.hpp  RenderPass.cpp  Shader.cpp  ShaderBuilder.hpp  ShaderMap.cpp  ShaderMap.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Framework/Source/Hash/: Hash.cpp  meow_hash_x64_aesni.h
Framework/Source/Logging/: LogFramework.hpp  LogOverloads.cpp  Logger.cpp
Framework/Source/Math/: Bounds2D.cpp  Bounds3D.cpp  Frustum.cpp  Matrix22.cpp  Matrix33.cpp  Matrix43.cpp  Matrix44.cpp  Quaternion.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Framework/Source/Memory/: AllocatorCommon.cpp  BuddyAllocator.cpp  MemoryPool.cpp
Framework/Source/Win32/: Win32Common.hpp  Win32DLLLoader.cpp  Win32Filesystem.cpp  Win32Runtime.cpp  Win32Runtime.hpp  Win32Time.cpp
Pipeline/: CMakeLists.txt
Pipeline/CMake/: Pipeline.cmake
Pipeline/Source/: ShaderProgramBuilder.cpp  Texture.cpp  TextureCompressor.cpp
Pipeline/Source/Graphics/: DXCShaderBuilder.cpp  GlslangShaderBuilder.cpp  ShaderBuilderCommon.cpp  ShaderBuilderCommon.hpp
Pipeline/Source/SceneImporter/: FBXImporter.cpp  GLTFImporter.cpp  Importer.hpp
Platform/: CMakeLists.txt
Platform/D3D11/: CMakeLists.txt  D3D11Commons.hpp  D3D11Device.hpp  D3D11Instance.hpp  D3D11LoaderApi.cpp
Platform/D3D12/: CMakeLists.txt  D3D12Adapter.cpp  D3D12Adapter.hpp  D3D12Allocator.cpp  D3D12Allocator.hpp  D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12Commons.cpp  D3D12Commons.hpp  D3D12Device.cpp  D3D12Device.hpp  D3D12Instance.cpp  D3D12Instance.hpp  D3D12LoaderApi.cpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12Queue.cpp  D3D12Queue.hpp  D3D12RenderPass.cpp  D3D12Resource.cpp  D3D12Resource.hpp  D3D12ResourceView.cpp  D3D12ResourceView.hpp  D3D12Swapchain.cpp  D3D12Swapchain.hpp
Platform/Vulkan/: CMakeLists.txt  VulkanAdapter.cpp  VulkanAdapter.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanCommandList.cpp  VulkanCommandList.hpp  VulkanCommons.cpp  VulkanCommons.hpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDescriptorSets.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameResources.cpp  VulkanFrameResources.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLoaderApi.cpp  VulkanLoaderApi.hpp  VulkanObjects.hpp  VulkanPipelineState.cpp  VulkanPipelineState.hpp  VulkanQueue.cpp  VulkanQueue.hpp  VulkanRenderPass.cpp  VulkanResource.cpp  VulkanResource.hpp  VulkanShaderCache.cpp  VulkanShaderCache.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanViews.cpp  VulkanViews.hpp
RecluseEditor/: CMakeLists.txt
RecluseEditor/CMake/: Main.cmake
RecluseEditor/CSharp/Graphics/: CMakeLists.txt
RecluseEditor/CSharp/Pipeline/: CMakeLists.txt
RecluseEditor/Frontend/: AssemblyInfo.cs  CMakeLists.txt  Main.xaml  Main.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NodeGraphWindow.xaml  NodeGraphWindow.xaml.cs  ShaderGraphWindow.xaml
RecluseEditor/Frontend/Backend/: MainWindow.cs  SettingsWindow.cs  SplashWindow.cs
RecluseEditor/Frontend/Content/: Main.xaml  MainWindow.xaml  Probe.cs  SettingsWindow.xaml  SplashWindow.xaml
RecluseEditor/Frontend/Core/: Geometry.cs  Math.cs  Renderer.cs  RendererDatabase.cs
RecluseEditor/Include/: GUIContext.hpp  MainEditorFrame.hpp
RecluseEditor/Include/Geometry/: Cube.hpp
RecluseEditor/Source/: GUIFactory.cpp  GUIFactory.hpp  Renderer.hpp  main.cpp
RecluseEditor/Source/WxWidgets/: WxContext.cpp  WxContext.hpp  WxFrame.hpp
ShaderCompiler/: CMakeLists.txt  CompilerConfigs.json  ShaderCompiler.cpp  ShaderCompiler.hpp  main.cpp
Test/: CMakeLists.txt  include.cmake
Test/CoreFramework/: CMakeLists.txt
Test/CoreFramework/BuddyMemoryTest/: CMakeLists.txt  main.cpp
Test/CoreFramework/LoggingTest/: CMakeLists.txt  main.cpp
Test/CoreFramework/RealtimeTicking/: CMakeLists.txt  main.cpp
Test/CoreFramework/Vector2MathTest/: CMakeLists.txt  main.cpp
Test/CoreFramework/WindowTest/: CMakeLists.txt  main.cpp
Test/EngineFramework/: CMakeLists.txt
Test/RenderFramework/: CMakeLists.txt
Test/ShadersTests/: Test.h  TestShader.ps.glsl  TestShader.vs.glsl  ViewManip.h
(+273 files in other folders)
